load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_library(
    name = "go_default_library",
    srcs = ["http-log.go"],
    importpath = "github.com/mt-inside/http-log/cmd",
    visibility = ["//visibility:private"],
    deps = ["@com_github_logrusorgru_aurora//:go_default_library"],
)

go_binary(
    name = "cmd",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "image",
    binary = "cmd",
    visibility = ["//visibility:public"],
)
